feat: use gradlew 8.10.2
- to create executable with jpackage we need an older version of gradle